[metadata]
name = sven
summary = a blog webserver
author = Lizhou fan
author-email = cokie@foxmail.com
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = sven

[entry_points]
console_scripts =